--- a/packages/passive-layout-effect/package.json
+++ b/packages/passive-layout-effect/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@react-hook/passive-layout-effect",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "author": "Jared Lunde <jared@BeStellar.co> (https://jaredLunde.com)",
   "license": "MIT",
   "main": "dist/cjs/index.js",
   "module": "dist/es/index.js",
   "types": "types/index.d.ts",
   "files": [
-    "/dist"
+    "/dist",
+    "/types"
   ],
   "description": "A React hook that uses useEffect() on the server and useLayoutEffect() in the browser",
   "keywords": [
