--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -45,7 +45,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run build-types && lint-staged"
+      "pre-commit": "npm run build-types && prettier --write \"types/**/*.ts\" && lint-staged"
     }
   },
   "lint-staged": {
