--- a/packages/throttle/package.json
+++ b/packages/throttle/package.json
@@ -60,7 +60,6 @@
     "husky": "latest",
     "jest": "latest",
     "lint-staged": "latest",
-    "mock-raf": "^1.0.1",
     "prettier": "latest",
     "react": "^16.12.0",
     "react-test-renderer": "^16.12.0",
@@ -68,9 +67,7 @@
     "ts-jest": "latest",
     "typescript": "latest"
   },
-  "dependencies": {
-    "@essentials/request-timeout": "^1.0.1"
-  },
+  "dependencies": {},
   "peerDependencies": {
     "react": ">=16.8"
   }
