--- a/packages/throttle/package.json
+++ b/packages/throttle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-hook/throttle",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "homepage": "https://github.com/jaredLunde/react-hook/tree/master/packages/throttle#readme",
   "repository": "github:jaredLunde/react-hook",
   "bugs": "https://github.com/jaredLunde/react-hook/issues",
@@ -16,8 +16,8 @@
     "throttle react state",
     "react throttle hook"
   ],
-  "main": "dist/cjs/index.js",
-  "module": "dist/es/index.js",
+  "main": "dist/main/index.js",
+  "module": "dist/module/index.js",
   "types": "types/index.d.ts",
   "files": [
     "/dist",
