[throttle] improve logic and performance

--- a/packages/debounce/package.json
+++ b/packages/debounce/package.json
@@ -56,23 +56,23 @@
   "devDependencies": {
     "@lunde/babel-preset-es": "latest",
     "@testing-library/react-hooks": "^3.2.1",
-    "@types/jest": "latest",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
+    "@types/jest": "^25.2.1",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
     "babel-plugin-optimize-react": "^0.0.4",
-    "cross-env": "latest",
-    "eslint": "latest",
+    "cross-env": "^7.0.2",
+    "eslint": "^6.8.0",
     "eslint-import-resolver-jest": "latest",
-    "eslint-plugin-jest": "latest",
-    "husky": "latest",
-    "jest": "latest",
-    "lint-staged": "latest",
-    "prettier": "latest",
+    "eslint-plugin-jest": "^23.8.2",
+    "husky": "^4.2.5",
+    "jest": "^25.4.0",
+    "lint-staged": "^10.1.7",
+    "prettier": "^2.0.5",
     "react": "^16.12.0",
     "react-test-renderer": "^16.12.0",
     "rimraf": "^2.6.3",
-    "ts-jest": "latest",
-    "typescript": "latest"
+    "ts-jest": "^25.4.0",
+    "typescript": "^3.8.3"
   },
   "dependencies": {},
   "peerDependencies": {
