--- a/packages/debounce/.eslintrc
+++ b/packages/debounce/.eslintrc
@@ -16,7 +16,8 @@
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/ban-ts-ignore": "off",
     "@typescript-eslint/camelcase": "off",
-    "@typescript-eslint/no-use-before-define": "off"
+    "@typescript-eslint/no-use-before-define": "off",
+    "@typescript-eslint/explicit-function-return-type": "off"
   },
   "env": {
     "browser": true,
