--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ matrix:
   include:
     - env: TARGET=packages/async
     - env: TARGET=packages/cache
-
+before_script:
+  - - chmod +x build-condition.sh
 script: if .travis/build-condition.sh $TRAVIS_COMMIT_RANGE $TARGET; then echo "$TARGET is being built" && cd $TARGET && yarn install && yarn validate && npx codecov@3; else echo "$TARGET is NOT being built"; fi
