--- a/packages/google-optimize/tsconfig.json
+++ b/packages/google-optimize/tsconfig.json
@@ -10,8 +10,8 @@
     "target": "es5",
     "lib": ["esnext", "dom", "dom.iterable"],
     "jsx": "react",
+    "strict": true,
     "moduleResolution": "node",
-    "strictNullChecks": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
