[window-scroll] Adds 'strict' property to tsconfig

--- a/packages/window-scroll/tsconfig.json
+++ b/packages/window-scroll/tsconfig.json
@@ -9,7 +9,7 @@
       // "dom.iterable"
     ],
     "moduleResolution": "node",
-    "strictNullChecks": true,
+    "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
