--- a/packages/throttle/package.json
+++ b/packages/throttle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-hook/throttle",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "homepage": "https://github.com/jaredLunde/react-hook/tree/master/packages/throttle#readme",
   "repository": "github:jaredLunde/react-hook",
   "bugs": "https://github.com/jaredLunde/react-hook/issues",
@@ -20,9 +20,11 @@
   ],
   "main": "dist/main/index.js",
   "module": "dist/module/index.js",
+  "source": "src/index.ts",
   "types": "types/index.d.ts",
   "files": [
     "/dist",
+    "/src",
     "/types"
   ],
   "sideEffects": false,
