--- a/packages/throttle/tsconfig.json
+++ b/packages/throttle/tsconfig.json
@@ -5,7 +5,7 @@
     "target": "es5",
     "lib": ["esnext", "dom"],
     "moduleResolution": "node",
-    "strictNullChecks": true,
+    "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
