--- a/packages/debounce/package.json
+++ b/packages/debounce/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-hook/debounce",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "homepage": "https://github.com/jaredLunde/react-hook/tree/master/packages/debounce#readme",
   "repository": "github:jaredLunde/react-hook",
   "bugs": "https://github.com/jaredLunde/react-hook/issues",
@@ -20,9 +20,11 @@
   ],
   "main": "dist/main/index.js",
   "module": "dist/module/index.js",
+  "source": "src/index.ts",
   "types": "types/index.d.ts",
   "files": [
     "/dist",
+    "/src",
     "/types"
   ],
   "sideEffects": false,
