Removes dependencies array

--- a/packages/hotkey/tsconfig.json
+++ b/packages/hotkey/tsconfig.json
@@ -13,11 +13,6 @@
     "moduleResolution": "node",
     "strictNullChecks": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "allowSyntheticDefaultImports": true,
-    "noImplicitReturns": false,
-    "noUnusedLocals": true,
-    "noFallthroughCasesInSwitch": true,
-    "noEmitOnError": true
+    "forceConsistentCasingInFileNames": true
   }
 }
