--- a/packages/hover/tsconfig.json
+++ b/packages/hover/tsconfig.json
@@ -9,13 +9,9 @@
       // "dom.iterable"
     ],
     "moduleResolution": "node",
-    "strictNullChecks": true,
+    "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "allowSyntheticDefaultImports": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noFallthroughCasesInSwitch": true,
-    "noEmitOnError": true
+    "allowSyntheticDefaultImports": true
   }
 }
