--- a/packages/window-scroll/package.json
+++ b/packages/window-scroll/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@react-hook/window-scroll",
-  "version": "1.1.5",
+  "version": "1.2.0",
   "homepage": "https://github.com/jaredLunde/react-hook/tree/master/packages/window-scroll#readme",
   "repository": "github:jaredLunde/react-hook",
   "bugs": "https://github.com/jaredLunde/react-hook/issues",
@@ -84,6 +84,7 @@
     "typescript": "latest"
   },
   "dependencies": {
+    "@react-hook/event": "^1.0.3",
     "@react-hook/throttle": "^2.1.2"
   },
   "peerDependencies": {
